--- a/src/components/SettingsPage.css
+++ b/src/components/SettingsPage.css
@@ -8,7 +8,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #fff;
+  background-color: #333;
+  color: white;
   z-index: 10000;
   overflow-y: auto;
 }
