--- a/src/components/SettingsPage.css
+++ b/src/components/SettingsPage.css
@@ -21,6 +21,16 @@
   background-color: #ccc;
 }
 
+.setting-version-info {
+  text-align: center;
+  margin: 25px;
+}
+
+.settings-content hr {
+  margin: 20px 0;
+  border: solid 2px white;
+}
+
 .settings-header h1 {
   margin: 0;
   font-size: 24px;
